[gd_scene load_steps=5 format=3 uid="uid://ds4oe8btwp7wv"]

[ext_resource type="Script" uid="uid://bfwtplalb0iko" path="res://scenes/entities/pause_menu.gd" id="1_jpr1o"]
[ext_resource type="PackedScene" uid="uid://q5cd1gsv2eaa" path="res://scenes/ui/custom_option_slider.tscn" id="2_65i54"]
[ext_resource type="Texture2D" uid="uid://koharlwm110l" path="res://assets/hamburger_menu.png" id="2_h4ctk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jpr1o"]
bg_color = Color(0.783523, 0.783523, 0.783523, 1)

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("options_ref", "selection_ref", "master_ref", "music_ref", "sfx_ref")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jpr1o")
options_ref = NodePath("HBoxContainer/Options")
selection_ref = NodePath("HBoxContainer/Selection")
master_ref = NodePath("HBoxContainer/Options/Panel/VBoxContainer/Master")
music_ref = NodePath("HBoxContainer/Options/Panel/VBoxContainer/Music")
sfx_ref = NodePath("HBoxContainer/Options/Panel/VBoxContainer/Sfx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 40.0
offset_bottom = 40.0

[node name="Selector" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Pause" type="Button" parent="HBoxContainer/Selector"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource("2_h4ctk")
expand_icon = true

[node name="Selection" type="MarginContainer" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Selection"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Selection/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="Resume" type="Button" parent="HBoxContainer/Selection/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Resume"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/Selection/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="Options" type="Button" parent="HBoxContainer/Selection/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Options"

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/Selection/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="Save" type="Button" parent="HBoxContainer/Selection/VBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Save"

[node name="MarginContainer4" type="MarginContainer" parent="HBoxContainer/Selection/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="HBoxContainer/Selection/VBoxContainer/MarginContainer4"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Quit to Menu"

[node name="Options" type="MarginContainer" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Panel" type="Panel" parent="HBoxContainer/Options"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jpr1o")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Options/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.0
offset_right = 87.0
offset_bottom = 118.0
grow_horizontal = 2

[node name="Master" parent="HBoxContainer/Options/Panel/VBoxContainer" instance=ExtResource("2_65i54")]
layout_mode = 2
value_name = "Master"

[node name="Music" parent="HBoxContainer/Options/Panel/VBoxContainer" instance=ExtResource("2_65i54")]
layout_mode = 2
value_name = "Music"

[node name="Sfx" parent="HBoxContainer/Options/Panel/VBoxContainer" instance=ExtResource("2_65i54")]
layout_mode = 2
value_name = "Sfx"

[node name="Close" type="Button" parent="HBoxContainer/Options/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Save and Close"

[connection signal="pressed" from="HBoxContainer/Selector/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="HBoxContainer/Selection/VBoxContainer/MarginContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="HBoxContainer/Selection/VBoxContainer/MarginContainer2/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="HBoxContainer/Selection/VBoxContainer/MarginContainer3/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="HBoxContainer/Selection/VBoxContainer/MarginContainer4/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="HBoxContainer/Options/Panel/VBoxContainer/Close" to="." method="_on_close_pressed"]
